# colis-constraints

./: Makefile  colis-constraints.opam  dune-project
.github/workflows/: ci.yml
docs/: index.html
docs/branch/main/: commit-hash  date
docs/branch/main/colis-constraints/: index.html
docs/branch/main/colis-constraints/Colis_constraints/: index.html
docs/branch/main/colis-constraints/Colis_constraints_common/: index.html
docs/branch/main/colis-constraints/Colis_constraints_common__/: index.html
docs/branch/main/colis-constraints/Colis_constraints_common__Atom/: index.html
docs/branch/main/colis-constraints/Colis_constraints_common__Conj/: index.html
docs/branch/main/colis-constraints/Colis_constraints_common__DXC/: index.html
docs/branch/main/colis-constraints/Colis_constraints_common__Derivable/: index.html
docs/branch/main/colis-constraints/Colis_constraints_common__Disj/: index.html
docs/branch/main/colis-constraints/Colis_constraints_naive/: index.html
src/: dune
src/common/: DXC.ml  DXC.mli  XConstraint.ml  XConstraint.mli  atom.ml  colis_constraints_common.ml  colis_constraints_common.mli  conj.ml  conj.mli  derivable.ml  derivable.mli  disj.ml  disj.mli  dune  extList.ml  extSeq.ml  limits.ml  literal.ml  path.ml
src/efficient/: colis_constraints_efficient.ml  colis_constraints_efficient.mli  core.ml  dune  external.ml  internal.ml
src/efficient/clause/: core.ml  core.mli  dune  external.ml
src/naive/: colis_constraints_naive.ml  colis_constraints_naive.mli  dune  engine.ml  pattern.ml  pattern.mli  rules.ml  rules.mli
tests/: dune
(+155 files in other folders)
